welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:6: error: ')' expected but ']' found.
  }else if (a%5==0]{
                  ^